Changes from jTDS 0.9
=========================

11/17/2004 - Alin Sinpalean
 o Fixed a problem with absolute(-1) (the row position was incorrectly
   updated).
 o Improved performance of MSCursorResultSet, by replacing sp_cursor FETCH_INFO
   calls with simple operations mimicking the behavior of SQL Server
   (incrementing the row count on INSERT and UPDATE).
 o Implemented support for ResultSet.insertRow() when no column is updated
   (i.e. inserting default values) in MSCursorResultSet.
 o Added charsets GB2312 and GBK as aliases for MS936.
 o Corrected bug [1067224] getPrimaryKeys does not return PK_NAME column.

11/15/2004 - Alin Sinpalean
 o Remapped TEXT/NTEXT to BLOB and IMAGE to CLOB in TdsData.types.
 o Partially applied patch [1065036] Problems with connection pooling and jTDS.
 o Cleaned up default value assignment to URL parameters, moving everything to
   DefaultProperties and replaced all property key literals with constants.
 o Corrected bug [1062395] Empty (but not null) blobs should return byte[0].
 o Applied Mike's fix for bug [1062549] Build fails under java 1.3.
 o Corrected bug [1062198] SecurityException not caught in class
   ConnectionJDBC2 (fix by Andreas Mross - amross).

11/10/2004 - David Kilzer
 o Fixed case of 'props.tcpnodelay' in JtdsDataSource.getConnection() (two
   unit tests were failing).
 o Added test for 'tcpNoDelay' property to DefaultPropertiesTestLibrary.

11/08/2004 - Brian Heineman
 o Added tcpNoDelay driver property; default is true.

11/05/2004 - Alin Sinpalean
 o Applied Mike's fix for bug [1060466] SQL Executed twice.
 o Applied Mike's fix for bug [1059916] Whitespace needed in preparedStatement.
 o Tiny fix in XaTest to avoid deadlocks in case an SQLException is thrown.

11/03/2004 - Alin Sinpalean
 o Updated JtdsDatabaseMetaData.getProcedures() to only cut off the ";" at the
   end of the procedure name for the first procedure (i.e. if it's ";1").

11/01/2004 - Alin Sinpalean